@@ -42,6 +42,8 @@
    http://msdn2.microsoft.com/en-us/library/ms177415(VS.80).aspx
 */
 
+#include <wtf/Platform.h>
+
 #include <stddef.h>
 
 #if !COMPILER(MSVC)
