@@ -1,3 +1,14 @@
+2012-11-05  Dima Gorbik  <dgorbik@apple.com>
+
+        Back out controversial changes from Bug 98665.
+        https://bugs.webkit.org/show_bug.cgi?id=101244
+
+        Reviewed by David Kilzer.
+
+        Backing out changes from Bug 98665 until further discussions take place on rules for including Platform.h in Assertions.h.
+
+        * DumpRenderTree/mac/MockGeolocationProvider.mm:
+
 2012-11-05  Dirk Pranke  <dpranke@chromium.org>
 
         webkitpy: lint, clean up rebaseline.py
